--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
       "react-app/jest"
     ]
   },
+  "resolutions": {
+    "autoprefixer": "10.4.5"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
